@@ -39,6 +39,8 @@ COM_PODCASTMANAGER_CONFIG_FIELD_LINKTITLE_DESCRIPTION="Use this title for links 
 COM_PODCASTMANAGER_CONFIG_FIELD_LINKTITLE_LABEL="Enclosure Link Title"
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERHEIGHT_DESCRIPTION="The height to use for the media player when playing audio files. You should leave this blank unless you need to adjust the player."
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERHEIGHT_LABEL="Audio Player Height"
+COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERSTYLE_DESCRIPTION="An optional CSS style to further customize the media player"
+COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERSTYLE_LABEL="Player Style"
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERWIDTH_DESCRIPTION="The width to use for the media player for all files. You should leave this blank unless you need to adjust the player."
 COM_PODCASTMANAGER_CONFIG_FIELD_PLAYERWIDTH_LABEL="Player Width"
 COM_PODCASTMANAGER_CONFIG_FIELD_TITLE_DEFAULT="My Podcast"
